# PypeDreams

./: .gitignore  README.md  build  pyproject.toml
.github/workflows/: python-publish.yml
examples/: demo.py
pype_dreams/: __init__.py  adjectives.py  clothing.py  pype_dreams.py
src/PypeDreams/: __init__.py  pype_dreams.py
src/pype_dreams/: __init__.py  pype_dreams.py
src/test_tool/: test_tool.py
test_tool/: test_tool.py
